# semseg_vaihingen

./: .gitignore  .stestr.conf  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/: .gitignore
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-semseg_start.py2.ipynb
semseg/: config.py
semseg/dataset/: make_dataset.py
semseg/features/: build_features.py
semseg/models/: create_resfiles.py  deepaas_api.py  evaluate_network.py  merge_maps.py  resnet50_edit.py  train_resnet50_fcn.py
semseg_vaihingen/: config.py
semseg_vaihingen/dataset/: make_dataset.py  raw2hdf5.py
semseg_vaihingen/features/: build_features.py
semseg_vaihingen/models/: augmentation.py  create_resfiles.py  data_io.py  deepaas_api.py  evaluate_network.py  model_generator.py  resnet50_edit.py  storeincsv.py  train_resnet50_fcn.py
semseg_vaihingen/tests/: test_unit_model.py
semseg_vaihingen/visualization/: visualize.py
