[metadata]
name = semseg
summary = 2D semantic segmentation (Vaihingen dataset)
description-file =
    README.md
author = G.Cavallaro (FZJ), M.Goetz (KIT), V.Kozlov (KIT)
author-email = valentin.kozlov@kit.edu
version = 0.1.0
license = MIT
home-page = https://git.scc.kit.edu/deep/semseg
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages =
    semseg

[entry_points]

deepaas.model = 
    semseg = semseg.models.deepaas_api

