[metadata]
name = semseg_vaihingen
summary = 2D semantic segmentation (Vaihingen dataset)
description-file =
    README.md
author = G.Cavallaro (FZJ), M.Goetz (KIT), V.Kozlov (KIT), A.Grupp (KIT)
author-email = valentin.kozlov@kit.edu
version = 0.3.0
license = MIT
home-page = https://github.com/deephdc/semseg_vaihingen
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


[files]
packages =
    semseg_vaihingen

[entry_points]

deepaas.v2.model = 
    semseg_vaihingen = semseg_vaihingen.models.deepaas_api

